--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
   "version": 2,
   "public": true,
-  "github": {
-    "enabled": true,
-    "autoJobCancelation": true
-  },
   "headers": [
     {
       "source": "/(.*)",
@@ -15,7 +11,11 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "frame-ancestors https://ok.ru"
+          "value": "frame-ancestors https://ok.ru https://*.ok.ru"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
         }
       ]
     }
