--- a/vercel.json
+++ b/vercel.json
@@ -7,15 +7,23 @@
       "headers": [
         {
           "key": "X-Frame-Options",
-          "value": "ALLOW-FROM https://ok.ru"
+          "value": "ALLOWALL"
         },
         {
           "key": "Content-Security-Policy",
-          "value": "frame-ancestors https://ok.ru https://*.ok.ru"
+          "value": "frame-ancestors 'self' https://ok.ru https://*.ok.ru https://odnoklassniki.ru https://*.odnoklassniki.ru"
         },
         {
           "key": "Access-Control-Allow-Origin",
           "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
         }
       ]
     }
