--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,4 @@
   for = "/*"
   [headers.values]
     X-Frame-Options = "ALLOW-FROM https://ok.ru"
-    Content-Security-Policy = "frame-ancestors 'self' https://ok.ru https://*.ok.ru;"
-    Access-Control-Allow-Origin = "*"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+    Content-Security-Policy = "frame-ancestors https://ok.ru https://*.ok.ru;"
