--- a/vercel.json
+++ b/vercel.json
@@ -5,24 +5,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": ""
-        },
-        {
-          "key": "X-Content-Security-Policy",
-          "value": ""
-        },
-        {
-          "key": "X-WebKit-CSP",
-          "value": ""
-        }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Content-Security-Policy",
-          "value": "frame-ancestors https://ok.ru https://*.ok.ru;"
+          "value": "frame-ancestors https://ok.ru https://*.ok.ru https://vk.com https://*.vk.com https://st.okcdn.ru https://*.okcdn.ru;"
         }
       ]
     }
